# uk-ai-agent-hackathon-ep3

./: .gitignore  AGENT_README.md  README.md  launch.py  pyproject.toml  test_setup.py
agents/: __init__.py  agent.py  data_models.py  npc_agent.py  npc_agent_temp.py  user_agent.py  user_agent_prototype.py
chromadb/0bfc5057-a587-47ae-b5ad-886a4f2197e0/: index_metadata.pickle
chromadb/35794885-e0fd-439c-a7f6-a3c336564b5c/: index_metadata.pickle
chromadb/757d66ac-aa57-4302-9b05-5f22d068461a/: index_metadata.pickle
chromadb/b1dd4883-3a40-4751-9d38-74836ee50ea6/: index_metadata.pickle
data/character_templates/: dnd_templates_cleaned.json
mcp_tools/: server.py
scripts/: clean_metadata.py  process_data.py
ui/: gradio_app.py
