[project]
name = "uk-ai-agent-hackathon-ep3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "mcp>=1.22.0",
    "openai>=2.8.1",
    "tqdm>=4.67.1",
    "uagents>=0.22.10",
    "uagents-adapter[mcp]>=0.6.2",
]
