[project]
name = "uk-ai-agent-hackathon-ep3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "torch==2.9.0+cu128",
    "dotenv>=0.9.9",
    "gradio>=5.0.0",
    "mcp>=1.22.0",
    "openai>=2.8.1",
    "tqdm>=4.67.1",
    "uagents>=0.22.10",
    "uagents-adapter[mcp]>=0.6.2",
    "sentence-transformers>=5.1.2",
]
[tool.uv.sources]
torch = {index = "torch_cuda"}
[[tool.uv.index]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
default = false
