[project]
name = "uk-ai-agent-hackathon-ep3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "torch==2.9.0+cu128",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "tqdm>=4.67.1",
    "uagents>=0.23.0",
    "sentence-transformers>=5.1.2",
    "uagents-core>=0.4.0",
]
[tool.uv.sources]
torch = {index = "torch_cuda"}
[[tool.uv.index]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
default = false
